--- a/assets/javascripts/discourse/templates/preferences/activity-pub.hbs
+++ b/assets/javascripts/discourse/templates/preferences/activity-pub.hbs
@@ -1,22 +1,71 @@
 {{body-class "user-preferences-activity-pub-page"}}
 
-<ActivityPubAuthorize />
+<div class="control-group user-actors">
+  <label class="control-label">{{i18n
+      "user.discourse_activity_pub.actors.title"
+    }}</label>
+  <div class="controls">
+    <label>{{i18n "user.discourse_activity_pub.actors.description"}}</label>
+    <ActivityPubAuthorize />
+  </div>
+</div>
 
 {{#if this.hasAuthorizations}}
   <div class="activity-pub-authorizations">
-    <h4>{{i18n "user.discourse_activity_pub.authorizations.title"}}</h4>
-    <label>{{i18n
-        "user.discourse_activity_pub.authorizations.description"
-      }}</label>
-    <ul>
-      {{#each this.authorizations as |authorization|}}
-        <li>
-          <ActivityPubAuthorization
-            @authorization={{authorization}}
-            @remove={{action "removeAuthorization"}}
-          />
-        </li>
-      {{/each}}
-    </ul>
+    <ResponsiveTable @className="activity-pub-actor-table authorizations">
+      <:header>
+        <div
+          class="activity-pub-actor-table-actor directory-table__column-header"
+        >
+          <div class="header-contents">
+            {{i18n "admin.discourse_activity_pub.actor.table.actor"}}
+          </div>
+        </div>
+        <div
+          class="activity-pub-actor-table-auth-type directory-table__column-header"
+        >
+          <div class="header-contents">
+            {{i18n "admin.discourse_activity_pub.actor.table.auth_type"}}
+          </div>
+        </div>
+        <div
+          class="activity-pub-actor-table-actions directory-table__column-header"
+        >
+          <div class="header-contents">
+            {{i18n "admin.discourse_activity_pub.actor.table.actions"}}
+          </div>
+        </div>
+      </:header>
+      <:body>
+        {{#each this.authorizations as |authorization|}}
+          <div class="directory-table__row activity-pub-actor-table-row">
+            <div class="directory-table__cell activity-pub-actor-table-actor">
+              <ActivityPubActor @actor={{authorization.actor}} />
+            </div>
+            <div
+              class="directory-table__cell activity-pub-actor-table-auth-type"
+            >
+              {{i18n
+                (concat
+                  "user.discourse_activity_pub.authorize.auth_type."
+                  authorization.auth_type
+                  ".title"
+                )
+              }}
+            </div>
+            <div class="directory-table__cell activity-pub-actor-table-actions">
+              <DButton
+                @icon="times"
+                @action={{action "remove" authorization}}
+                @label="user.discourse_activity_pub.remove_authorization_button.label"
+                @title="user.discourse_activity_pub.remove_authorization_button.title"
+                id="user_activity_pub_authorize_remove_authorization"
+                class="activity-pub-authorize-remove-authorization"
+              />
+            </div>
+          </div>
+        {{/each}}
+      </:body>
+    </ResponsiveTable>
   </div>
 {{/if}}
