FIX: ActivityPub user locale strings

--- a/assets/javascripts/discourse/templates/preferences/activity-pub.hbs
+++ b/assets/javascripts/discourse/templates/preferences/activity-pub.hbs
@@ -18,21 +18,21 @@
           class="activity-pub-actor-table-actor directory-table__column-header"
         >
           <div class="header-contents">
-            {{i18n "admin.discourse_activity_pub.actor.table.actor"}}
+            {{i18n "user.discourse_activity_pub.actor"}}
           </div>
         </div>
         <div
           class="activity-pub-actor-table-auth-type directory-table__column-header"
         >
           <div class="header-contents">
-            {{i18n "admin.discourse_activity_pub.actor.table.auth_type"}}
+            {{i18n "user.discourse_activity_pub.auth_type"}}
           </div>
         </div>
         <div
           class="activity-pub-actor-table-actions directory-table__column-header"
         >
           <div class="header-contents">
-            {{i18n "admin.discourse_activity_pub.actor.table.actions"}}
+            {{i18n "user.discourse_activity_pub.actions"}}
           </div>
         </div>
       </:header>
