Add log records and list them in plugin admin

--- a/assets/javascripts/discourse/templates/admin-plugins-activity-pub.hbs
+++ b/assets/javascripts/discourse/templates/admin-plugins-activity-pub.hbs
@@ -15,6 +15,11 @@
       <span>{{i18n "admin.discourse_activity_pub.actor.tag.label"}}</span>
     </LinkTo>
   </li>
+  <li>
+    <LinkTo @route="adminPlugins.activityPub.log">
+      <span>{{i18n "admin.discourse_activity_pub.log.label"}}</span>
+    </LinkTo>
+  </li>
   <li class="activity-pub-add-actor">
     <LinkTo
       @route="adminPlugins.activityPub.actorShow"
