Add delivery time record

--- a/assets/javascripts/discourse/components/modal/activity-pub-post-info.hbs
+++ b/assets/javascripts/discourse/components/modal/activity-pub-post-info.hbs
@@ -48,6 +48,11 @@
           {{/if}}
         </span>
       {{/if}}
+      {{#if this.showDelivered}}
+        <span class="activity-pub-delivered">{{d-icon
+            "envelope"
+          }}{{this.deliveredText}}</span>
+      {{/if}}
     </div>
   </:body>
 </DModal>
