Add post and topic admin controls

--- a/assets/javascripts/discourse/components/modal/activity-pub-post-info.hbs
+++ b/assets/javascripts/discourse/components/modal/activity-pub-post-info.hbs
@@ -5,9 +5,9 @@
 >
   <:body>
     <div class="activity-pub-post-info-list">
-      <span class="activity-pub-state">{{d-icon
-          this.stateIcon
-        }}{{this.stateText}}</span>
+      <span class="activity-pub-status">{{d-icon
+          this.statusIcon
+        }}{{this.statusText}}</span>
       {{#if this.showVisibility}}
         <span class="activity-pub-visibility">{{d-icon
             this.visibilityIcon
