--- a/assets/javascripts/discourse/components/modal/activity-pub-topic-admin.hbs
+++ b/assets/javascripts/discourse/components/modal/activity-pub-topic-admin.hbs
@@ -34,6 +34,7 @@
                 @translatedLabel={{this.publishLabel}}
                 @action={{this.publish}}
                 @disabled={{this.topic.activity_pub_first_post_scheduled}}
+                class="publish"
               />
             </div>
             <div class="action-description">
