Fix icon deprecation

--- a/assets/javascripts/discourse/templates/preferences/activity-pub.hbs
+++ b/assets/javascripts/discourse/templates/preferences/activity-pub.hbs
@@ -55,7 +55,7 @@
             </div>
             <div class="directory-table__cell activity-pub-actor-table-actions">
               <DButton
-                @icon="times"
+                @icon="xmark"
                 @action={{action "remove" authorization}}
                 @label="user.discourse_activity_pub.remove_authorization_button.label"
                 @title="user.discourse_activity_pub.remove_authorization_button.title"
