--- a/assets/javascripts/discourse/connectors/composer-action-after/activity-pub-category-status.hbs
+++ b/assets/javascripts/discourse/connectors/composer-action-after/activity-pub-category-status.hbs
@@ -1,3 +1,3 @@
 {{#if this.showStatus}}
-  <ActivityPubStatus @model={{this.model}} @modelType="composer" />
+  <ActivityPubActorStatus @model={{this.model}} @modelType="composer" />
 {{/if}}
