--- a/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor-show.hbs
+++ b/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor-show.hbs
@@ -38,7 +38,7 @@
       </div>
     {{else}}
       <ActivityPubActorModel @actor={{this.actor}} />
-      <ActivityPubStatus
+      <ActivityPubActorStatus
         @model={{this.actor.model}}
         @modelType={{this.actor.model_type}}
       />
