Separate admin info into a component

--- a/assets/javascripts/discourse/components/modal/activity-pub-post-admin.hbs
+++ b/assets/javascripts/discourse/components/modal/activity-pub-post-admin.hbs
@@ -4,6 +4,11 @@
   class="activity-pub-post-admin-modal"
 >
   <:body>
+    <ActivityPubAdminInfo
+      @post={{this.post}}
+      @topic={{this.topic}}
+      @context="post"
+    />
     <ActivityPubPostActions @post={{this.post}} />
   </:body>
   <:footer>
