--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -571,10 +571,12 @@ body.user-preferences-activity-pub-page {
   }
 }
 
-.activity-pub-topic-admin-modal {
+.activity-pub-topic-admin-modal,
+.activity-pub-post-admin-modal {
   .d-modal__body {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     gap: 1em;
   }
 }
@@ -596,6 +598,7 @@ body.user-preferences-activity-pub-page {
     display: flex;
     gap: 1em;
     width: 100%;
+    align-items: center;
 
     .action-button {
       .d-button-label {
@@ -620,4 +623,30 @@ body.user-preferences-activity-pub-page {
   display: flex;
   align-items: center;
   color: var(--primary-700);
+}
+
+.activity-pub-admin-info {
+  padding: 0.75em;
+  background-color: var(--primary-very-low);
+  border-radius: 4px;
+  color: var(--primary-700);
+  display: flex;
+  flex-direction: column;
+  gap: 0.75em;
+  border: 1px solid var(--primary-low);
+
+  .activity-pub-admin-info-actors {
+    display: flex;
+    gap: 0.5em;
+    flex-direction: column;
+
+    .content {
+      display: flex;
+      gap: 0.75em;
+    }
+
+    .handle {
+      color: var(--primary-700);
+    }
+  }
 }
