--- a/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor-show.hbs
+++ b/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor-show.hbs
@@ -109,7 +109,7 @@
             class="activity-pub-actor-setting activity-pub-post-object-type"
           >
             <label for="activity-pub-post-object-type">{{i18n
-                "admin.discourse_activity_pub.actor.post_object_type"
+                "admin.discourse_activity_pub.actor.object_type"
               }}</label>
             <ActivityPubPostObjectTypeDropdown
               @value={{this.actor.post_object_type}}
