Revert "FEATURE: Add ActivityPub topic map, topic actions, post actions and topic info, and update ActivityPub post info. (#161)"
This reverts commit 414d17d65390f49121bd0b3c242b221f267c7e41.

--- a/assets/javascripts/discourse/connectors/composer-action-after/activity-pub-category-status.hbs
+++ b/assets/javascripts/discourse/connectors/composer-action-after/activity-pub-category-status.hbs
@@ -1,3 +1,3 @@
 {{#if this.showStatus}}
-  <ActivityPubActorStatus @model={{this.model}} @modelType="composer" />
+  <ActivityPubStatus @model={{this.model}} @modelType="composer" />
 {{/if}}
