--- a/assets/javascripts/discourse/templates/activity-pub-about.hbs
+++ b/assets/javascripts/discourse/templates/activity-pub-about.hbs
@@ -1,20 +1,24 @@
 <div class="activity-pub-about">
   <h3>{{i18n "discourse_activity_pub.about.title"}}</h3>
   <p>{{i18n "discourse_activity_pub.about.description"}}</p>
-  <div class="activity-pub-actors categories">
-    <h3>{{i18n "discourse_activity_pub.about.categories"}}</h3>
-    <div class="activity-pub-actors-list">
-      {{#each this.categoryActors as |actor|}}
-        <ActivityPubActorCard @actor={{actor}} />
-      {{/each}}
+  {{#if this.hasCategoryActors}}
+    <div class="activity-pub-actors categories">
+      <h3>{{i18n "discourse_activity_pub.about.categories"}}</h3>
+      <div class="activity-pub-actors-list">
+        {{#each this.categoryActors as |actor|}}
+          <ActivityPubActorCard @actor={{actor}} />
+        {{/each}}
+      </div>
     </div>
-  </div>
-  <div class="activity-pub-actors tags">
-    <h3>{{i18n "discourse_activity_pub.about.tags"}}</h3>
-    <div class="activity-pub-actors-list">
-      {{#each this.tagActors as |actor|}}
-        <ActivityPubActorCard @actor={{actor}} />
-      {{/each}}
+  {{/if}}
+  {{#if this.hasTagActors}}
+    <div class="activity-pub-actors tags">
+      <h3>{{i18n "discourse_activity_pub.about.tags"}}</h3>
+      <div class="activity-pub-actors-list">
+        {{#each this.tagActors as |actor|}}
+          <ActivityPubActorCard @actor={{actor}} />
+        {{/each}}
+      </div>
     </div>
-  </div>
+  {{/if}}
 </div>
