--- a/assets/javascripts/discourse/components/modal/activity-pub-follow.hbs
+++ b/assets/javascripts/discourse/components/modal/activity-pub-follow.hbs
@@ -9,7 +9,7 @@
       <label class="activity-pub-handle-label">
         {{i18n "discourse_activity_pub.handle.label"}}
       </label>
-      <ActivityPubHandle @actor={{@model.actor}} />
+      <ActivityPubHandle @actor={{@model.actor}} @hideLink={{true}} />
       <div class="activity-pub-handle-description">
         {{i18n "discourse_activity_pub.handle.description"}}
       </div>
